[package]
name = "divamodarchive2"
version = "1.0.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum", "markdown"] }
askama_axum = "0.4"
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["cookie", "query"] }
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9.3"
meilisearch-sdk = "0.27"
module_db = { git = "https://github.com/BroGamer4256/module_db" }
pv_db = { git = "https://github.com/BroGamer4256/pv_db" }
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab_tree = "0.3"
sqlx = { version = "0.8", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "time",
] }
temp-dir = "0.1"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["full"] }
url = "2.5"
walkdir = "2.5"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
